[gd_scene load_steps=11 format=3 uid="uid://rx5mrmc2csae"]

[ext_resource type="Script" uid="uid://cuudgo2jqf1q4" path="res://Assets/Scripts/StoryInitializer.gd" id="1_0s24k"]
[ext_resource type="Theme" uid="uid://dspuh7p7f5rfg" path="res://Assets/UI/StoryTheme.tres" id="1_x8d7b"]
[ext_resource type="Script" uid="uid://ccydxhn2l62r" path="res://Assets/Scripts/StoryUI.gd" id="3_b2tde"]
[ext_resource type="PackedScene" uid="uid://l8fr2ijwelce" path="res://Assets/UI/StoryText.tscn" id="4_14l7b"]
[ext_resource type="PackedScene" uid="uid://468bgu5ql3da" path="res://Assets/UI/StoryChoice.tscn" id="5_21upg"]
[ext_resource type="PackedScene" uid="uid://ddr4ip2rrsuk8" path="res://Assets/UI/StorySeparator.tscn" id="6_3m0a7"]
[ext_resource type="Script" uid="uid://m21pffbi0ll2" path="res://addons/inkgd/ink_player.gd" id="46_57prh"]
[ext_resource type="Resource" uid="uid://bobnu5o0rqmj2" path="res://Assets/Ink/story.ink.json" id="47_y62fx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wl40i"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kk1fi"]
bg_color = Color(0.0392157, 0.0392157, 0.0588235, 1)

[node name="Story" type="Node"]
script = ExtResource("1_0s24k")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x8d7b")

[node name="Panel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wl40i")

[node name="StoryUI" type="Panel" parent="HUD" groups=["StoryUI"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_right = 559.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kk1fi")
script = ExtResource("3_b2tde")

[node name="ScrollContainer" type="ScrollContainer" parent="HUD/StoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/StoryUI/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/StoryUI/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StoryText" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_14l7b")]
layout_mode = 2
scroll_active = false
script = null

[node name="StorySeparator" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_3m0a7")]
layout_mode = 2

[node name="StoryText2" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_14l7b")]
layout_mode = 2
script = null

[node name="StoryText3" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_14l7b")]
layout_mode = 2
script = null

[node name="StoryText4" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_14l7b")]
layout_mode = 2
script = null

[node name="StoryText5" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_14l7b")]
layout_mode = 2
script = null

[node name="StoryText6" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_14l7b")]
layout_mode = 2
script = null

[node name="StoryText7" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_14l7b")]
layout_mode = 2
script = null

[node name="StoryText8" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_14l7b")]
layout_mode = 2
script = null

[node name="StoryChoice" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_21upg")]
layout_mode = 2
script = null

[node name="StoryChoice2" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_21upg")]
layout_mode = 2
script = null

[node name="StoryChoice3" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_21upg")]
layout_mode = 2
script = null

[node name="BottomSpacer" type="Control" parent="HUD/StoryUI/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InkPlayer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("46_57prh")
ink_file = ExtResource("47_y62fx")
loads_in_background = false
